# SEP_BLOCKCOMPRESSION_S2_2024

./: .gitignore  README.md
Benchmarks/Input/: benchmark_access_method.cpp  benchmark_getting_labels.cpp  makefile
CompressionFixedSize/: CompressionFixedSize.cpp  CompressionFixedSize.h  Makefile
CompressionLZ77/: Compression.cpp  Compression.h  lz77.cpp
CompressionRLE/: Compression.cpp  Compression.h  RunLengthEncoding1D.cpp  RunLengthEncoding3D.cpp
CompressionRecursive/: FasterRecursiveSplittingCompression.cpp  RecursiveSplittingCompression.cpp
Input/: BasicInput.cpp  BasicInput.h  FirstInput.cpp  FirstInput.h  Input.h
Serialiser/: Benchmark.cpp  Test.cpp  ThreadedSerialiser.hpp
Test/CompressionTests/FixedSize/: FixedSizeTests.cpp
Test/Data/: test1.txt  test2.txt
Test/Input/: input_test.cpp  makefile
doug_2d_rle/: MultiSerialiser.hpp  Serialiser.hpp  compile_flags.txt  fast_2d.cpp  fast_2d_mutex.cpp  fast_2d_single.cpp  makefile  readme.md
doug_rle/: Serialiser.h  makefile  readme.md  simd_shift_v0.cpp  simd_shift_v1.cpp  simd_shift_v2.cpp  simd_shift_v3.cpp
extractors/: all.cpp  check_avx2.cpp  check_network.py  firstline.cpp  makefile  parent_size.cpp  tag_size.cpp  world_size.cpp  xyworld_size.cpp  zworld_size.cpp
helper/: .gitignore  Cargo.toml  out.txt  output.txt  readme.md
helper/src/: generator.rs  lib.rs  main.rs
the_into_one/: makefile  naive_copy.cpp  readme.md  simd_shift.cpp
visualiser/: Cargo.toml  readme.md
visualiser/src/: lines.rs  main.rs
