[package]
name = "visualiser"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.86"
bevy = "0.14.1"
clap = "4.5.16"
helper = { path="../helper" }
